--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                           <a href="http://wpa.qq.com/msgrd?v=3&uin=3178759181&site=qq&menu=yes" target="_blank"> 
                           <div class="item"> <div class="avatar"> <img src="http://q1.qlogo.cn/g?b=qq&nk=3178759181&s=100"> </div> 
                           <div class="inner"> <h5>江挽</h5> <p>一个爱玩游戏的学生</p> </div> </div> </a> 
-                          <a href="http://wpa.qq.com/msgrd?v=3&uin=3520630796&site=qq&menu=yes" target="_blank"> 
+                          <a href="member/coldfly/index.html" target="_blank"> 
                           <div class="item"> <div class="avatar"> <img src="http://q1.qlogo.cn/g?b=qq&nk=3520630796&s=100"> </div> 
                           <div class="inner"> <h5>冷飞</h5> <p>做mineimator厉害的人</p> </div> </div> </a> 
                           <a href="http://wpa.qq.com/msgrd?v=3&uin=3261433928&site=qq&menu=yes" target="_blank"> 
