--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                           <div class="item"> <div class="avatar"> <img src="http://q1.qlogo.cn/g?b=qq&nk=3153950091&s=100"> </div> 
                           <div class="inner"> <h5>缘</h5>
                           <p>傻逼缘</p> </div> </div> </a>
-                          <a href="http://wpa.qq.com/msgrd?v=3&uin=878122026&site=qq&menu=yes" target="_blank"> 
+                          <a href="member/hacker/Death.Hacker" target="_blank"> 
                           <div class="item"> <div class="avatar"> <img src="http://q1.qlogo.cn/g?b=qq&nk=878122026&s=100"> </div> 
                           <div class="inner"> <h5>书生</h5> <p>Hacker|一个认识很久的人</p> </div> </div> </a> 
                           <a href="member/cheng/index.html" target="_blank"> <div class="item"> 
