--- a/member/hacker/Death.Hacker.html
+++ b/member/hacker/Death.Hacker.html
@@ -1,13 +1,16 @@
 
 
 <html> 
+<head>
+ <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+</head>
 <style type="text/css"> 
 <!--
 .STYLE1 {font-size: medium}
 -->
 </style> 
 <center><br><br><br><br><HEAD> 
-<title>HacKer-ÊéÉú Qq:878122026</title> 
+<title>HacKer-ä¹¦ç”Ÿ Qq:878122026</title> 
 <br>[Booksir pass by your station.]<br> 
 <style type="text/css"> 
 /* Circle Text Styles */
@@ -22,7 +25,7 @@ color: #1400FF;
 <script type="text/javascript"> 
 ;(function(){
 // Your message here (QUOTED STRING)
-var msg = "HacKer.ÊéÉú -Qq£º878 122 026";
+var msg = "HacKer.ä¹¦ç”Ÿ -Qqï¼š878 122 026";
 // Set font's style size for calculating dimensions
 // Set to number of desired pixels font size (decimal and negative numbers not allowed)
 var size = 24;
@@ -205,7 +208,7 @@ margin-right: 0px;
 }
 </style> 
 <div align="center"> 
-<h1 id="r1">HacKer.ÊéÉú
+<h1 id="r1">HacKer.ä¹¦ç”Ÿ
 </div> 
 <script type="text/javascript"> 
 var r1=document.getElementById("r1"); //get span to apply rainbow
@@ -224,7 +227,7 @@ myRainbowSpan2.timer=window.setInterval("myRainbowSpan2.moveRainbow()", myRainbo
 </html> 
   <html> 
 <body bgcolor="#000000"> 
-<body onContextMenu="alert('Fuck~.By-ÊéÉúQq£º878 122 026    '); return false" NOOP="if (window.event != null && window.event.button == 2) alert ('Thanks...');"> 
+<body onContextMenu="alert('Fuck~.By-ä¹¦ç”ŸQqï¼š878 122 026    '); return false" NOOP="if (window.event != null && window.event.button == 2) alert ('Thanks...');"> 
 <style type="text/css"> 
 /* Circle Text Styles */
 #outerCircleText {
@@ -332,7 +335,7 @@ else if (window.attachEvent){
 <h2> 
 <center> 
 <script language="JavaScript1.2"> 
-var message="ÈëÇÖÉÏµÛµÄµçÄÔ,ĞŞ¸ÄÎÒ¿ÉĞ¦µÄÃüÔË¡£"
+var message="å…¥ä¾µä¸Šå¸çš„ç”µè„‘,ä¿®æ”¹æˆ‘å¯ç¬‘çš„å‘½è¿ã€‚"
 var neonbasecolor="pink"
 var neontextcolor="red"
 var flashspeed=100  //in milliseconds
@@ -374,7 +377,7 @@ flashing=setInterval("neon()",flashspeed)
 beginneon()
 </script></h2> 
     <td><center> 
-<FONT face="Monotype Corsiva" size="3" color=" #66ffff"> <br>HacKer.ÊéÉú Qq.878122026<br>   <br>Good Brothers£º<br>  <br>ÏÄÄ­-ÄûÃÊ-É§¿Í-ÄîÏ«-³Äºâ-ÍÃÍÃ-¹æÂÉ-±¿±¿¾Ó-m4-BackRe-°Ë»Ä-Ë¾Âí¹â...<br> 
+<FONT face="Monotype Corsiva" size="3" color=" #66ffff"> <br>HacKer.ä¹¦ç”Ÿ Qq.878122026<br>   <br>Good Brothersï¼š<br>  <br>å¤æ²«-æŸ æª¬-éªšå®¢-å¿µæ±-è¡¬è¡¡-å…”å…”-è§„å¾‹-ç¬¨ç¬¨å±…-m4-BackRe-å…«è’-å¸é©¬å…‰...<br> 
 <tr> 
 </tr> 
 </table> 
