--- a/member/hacker/Death.Hacker.html
+++ b/member/hacker/Death.Hacker.html
@@ -2,7 +2,7 @@
 
 <html> 
 <head>
- <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<meta charset="UTF-8">
 </head>
 <style type="text/css"> 
 <!--
@@ -226,6 +226,7 @@ myRainbowSpan2.timer=window.setInterval("myRainbowSpan2.moveRainbow()", myRainbo
 </script> 
 </html> 
   <html> 
+   <head><meta charset="UTF-8"></head>
 <body bgcolor="#000000"> 
 <body onContextMenu="alert('Fuck~.By-书生Qq：878 122 026    '); return false" NOOP="if (window.event != null && window.event.button == 2) alert ('Thanks...');"> 
 <style type="text/css"> 
