--- a/index.html
+++ b/index.html
@@ -194,10 +194,13 @@
                           <a href="http://wpa.qq.com/msgrd?v=3&uin=2696205801&site=qq&menu=yes" target="_blank"> 
                           <div class="item"> <div class="avatar"> <img src="http://q1.qlogo.cn/g?b=qq&nk=2696205801&s=100"> </div> 
                           <div class="inner"> <h5>zai_feng</h5> <p>多边形战士</p> </div> </div> </a> 
-						  <a href="http://wpa.qq.com/msgrd?v=3&uin=3173715147&site=qq&menu=yes" target="_blank"> 
+		          <a href="http://wpa.qq.com/msgrd?v=3&uin=3173715147&site=qq&menu=yes" target="_blank"> 
                           <div class="item"> <div class="avatar"> <img src="http://q1.qlogo.cn/g?b=qq&nk=3173715147&s=100"> </div> 
                           <div class="inner"> <h5>DJ_xinchen</h5> <p>一个耿直的MC玩家</p> </div> </div> </a> 
-						
+			  <a href="http://wpa.qq.com/msgrd?v=3&uin=2079768662&site=qq&menu=yes" target="_blank"> 
+                          <div class="item"> <div class="avatar"> <img src="http://q1.qlogo.cn/g?b=qq&nk=2079768662&s=100"> </div> 
+                          <div class="inner"> <h5>沐芋</h5> <p>一个很早认识的MC好友</p> </div> </div> </a> 
+								
                                      </div> </a> </div></div> </div>
                  <div class="footer ch"> <div class="container"> <h3>BackRer的个人主页</h3> <p>这里只是开始</p> 
                  <p class="c"><a href="/">Say hello to me @ </a></p> 
